# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.845 2010/06/10 00:25:43 mpagano Exp $

*git-sources-2.6.35_rc2-r4 (10 Jun 2010)

  10 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc2-r4.ebuild:
  Version bump

*git-sources-2.6.35_rc2-r3 (09 Jun 2010)

  09 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc2-r3.ebuild:
  Version bump

*git-sources-2.6.35_rc2-r2 (08 Jun 2010)

  08 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc2-r2.ebuild:
  Version bump

*git-sources-2.6.35_rc2-r1 (07 Jun 2010)

  07 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc2-r1.ebuild:
  Version bump

*git-sources-2.6.35_rc2 (06 Jun 2010)
*git-sources-2.6.35_rc1-r5 (06 Jun 2010)

  06 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r5.ebuild, +git-sources-2.6.35_rc2.ebuild:
  Version bumps

*git-sources-2.6.35_rc1-r4 (05 Jun 2010)

  05 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r4.ebuild:
  Version bump

*git-sources-2.6.35_rc1-r3 (05 Jun 2010)

  05 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r3.ebuild:
  Version bump

*git-sources-2.6.35_rc1-r2 (04 Jun 2010)

  04 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.34-r1.ebuild, -git-sources-2.6.34-r2.ebuild,
  -git-sources-2.6.34-r3.ebuild, -git-sources-2.6.34-r4.ebuild,
  -git-sources-2.6.34-r5.ebuild, -git-sources-2.6.34-r6.ebuild,
  -git-sources-2.6.34-r7.ebuild, -git-sources-2.6.34-r8.ebuild,
  -git-sources-2.6.34-r9.ebuild, -git-sources-2.6.34-r10.ebuild,
  -git-sources-2.6.34-r11.ebuild, -git-sources-2.6.34-r12.ebuild,
  -git-sources-2.6.34-r13.ebuild, -git-sources-2.6.34-r14.ebuild,
  -git-sources-2.6.34-r15.ebuild, -git-sources-2.6.34-r16.ebuild,
  +git-sources-2.6.35_rc1-r2.ebuild: