@@ -12,6 +12,7 @@ DIST patch-2.6.35-rc2-git1.bz2 507 RMD160 5f1cdcbf3a195dd90a7a4586403932cac19d98
 DIST patch-2.6.35-rc2-git2.bz2 5572 RMD160 1f82faf41c8d4c36adbc64e684d6f2c88b32fefb SHA1 b27c98bba3718590272e58cbc2313c37038539b5 SHA256 dc7beecc8b835e1de0ff3d8a60e97157df89f390e27df7bd0e72ed90562fb8b9
 DIST patch-2.6.35-rc2-git3.bz2 18009 RMD160 7270c981d6385492ccf1a7860ac99175ba17e555 SHA1 ca8a942537015f714999929437106fa165a3a502 SHA256 197ae03fb1f076e54ff84aef0f66acca0581ee6d8e49b3c1223b4da683cb0923
 DIST patch-2.6.35-rc2-git4.bz2 26674 RMD160 8e9cb8b765246970e3a3aad08186d3dc6fe3d06e SHA1 05024392816b028917ce824841361a45434e8c39 SHA256 ec0ff80f305d753e6b8cb220f86cbfd36f0b35b33d88fa4f92921ae7635ede70
+DIST patch-2.6.35-rc2-git5.bz2 36968 RMD160 73bc06bcf996812d3e4590c68de7533b866d649a SHA1 c72b7877ea6c97ffb69e289229418c77cefa1188 SHA256 dd6a72879e057d5ff89c138d15d8ae22121ba3a95ee6da83c23b8f1fa3f55970
 DIST patch-2.6.35-rc2.bz2 7553440 RMD160 1e34784f0a7ecad657c851ea08c585fbab767697 SHA1 72dba82a3aa210e790a9d082a2421a91a85a30a2 SHA256 1ea41efa9a50d16a7952f64db1cf18cc342f10cb1e742965a074f8e8e5805a39
 EBUILD git-sources-2.6.35_rc1-r1.ebuild 1246 RMD160 0fc852ba94a56c507b6e44817c7fe99b70e65c84 SHA1 4be102b25db4647d428977723d2aed2476b3ae81 SHA256 9be553978231b09616bff0297bcf238d51918cae6030c3b0804e65190492e82b
 EBUILD git-sources-2.6.35_rc1-r2.ebuild 1246 RMD160 1175bce4f48fd7112cedf75f001945a536a4c064 SHA1 6b2d23e4c7c0933965a4bb1af4ce45759e109600 SHA256 0be82327b512336dd743fb4aa468ff176aff29f065590fe5ea432d46db409ee1
@@ -23,13 +24,14 @@ EBUILD git-sources-2.6.35_rc2-r1.ebuild 1246 RMD160 a09dc4b57f76668fda857687bce4
 EBUILD git-sources-2.6.35_rc2-r2.ebuild 1246 RMD160 a01b8de143ae9d35f00cb0563dce536373267231 SHA1 99097d5b46fab11caa5925eaacc31a53c5f990d9 SHA256 2ac69e679a72cdac3d4e3dbd56f7b7d7e0bf1e33cd7e9e8283a82f1a527386d5
 EBUILD git-sources-2.6.35_rc2-r3.ebuild 1246 RMD160 12029c6830669cb6474c6766422a19e7cabc102d SHA1 8ffdff21c78baa35afc98e64b4f8a1f3d6cb1562 SHA256 121aa706c7ee5cc3f94b5c4b95a4708f27cb77599442c175442d05a9a6eed549
 EBUILD git-sources-2.6.35_rc2-r4.ebuild 1246 RMD160 041f6f57611a3fa1ec041e86d1adebdf39b68b0d SHA1 ea8fdad675afb16b780a85254bbe42ba98d39db0 SHA256 8ad0fdacf8cd483bdade75edfb25f993281b3a35b0f7af60f8dfee7324209bbc
+EBUILD git-sources-2.6.35_rc2-r5.ebuild 1246 RMD160 6160b22deb4b3da6b28b00548be972347f11de47 SHA1 2e269c66153aca39403b0737524b4c504de9be12 SHA256 39f8c99dfb17c5cc56dc645db71ec625f8e65e867616609041251d01d1f34946
 EBUILD git-sources-2.6.35_rc2.ebuild 1243 RMD160 d0f1a885b1018188afe37af96e1bc746703f775b SHA1 03f51e1dbcad8d27def602a0e374f172882d3797 SHA256 9eb5eab8db66f09aa0d3918c7a557e89c5315e7534f5080301a93263527a07c3
-MISC ChangeLog 161984 RMD160 5343949c2b78e1feff37e18aa434cab5f74a6edf SHA1 6dacc064415504ffdf8d89b0d700d47a392334b4 SHA256 8c3a7249ef63bd3ba725c0379d8293a36e183b51b55725f94cd88325cb8f0beb
+MISC ChangeLog 162130 RMD160 12d9ff5897fe8dcf75c62631112e0ba959ccdfb1 SHA1 fac56ba8379bafe97485d5616c64cc257e81a692 SHA256 bf0da7fb0d5def66aca6193022420a88e6426b0d02a656aa7f14af8b337b2598
 MISC metadata.xml 567 RMD160 e4aa86f6f16e102f0e0704afd106f06c92662374 SHA1 d7d65c3a36a62994e6bf60d4d7e101971ec8feb8 SHA256 5e47ce9a1dc6123cba8515903fa09559bf76a652c79e248bc940ec154fb03546
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwQMRAACgkQPDPGULV25OM2BQCfR1/jnure+W52uEDcxWrWemcJ
-+9EAniZM3TWgLRuHMyDdwSBfzIznIfz5
-=FeRy
+iEYEARECAAYFAkwRgQ0ACgkQPDPGULV25OM9vQCgtodFLIcPhjgWnpRoDtMuFrcF
+DaYAnA0zXI1GrNAjf5c0SkVYkR5VkwPI
+=FkiO
 -----END PGP SIGNATURE-----
