@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.845 2010/06/10 00:25:43 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.846 2010/06/11 00:19:15 mpagano Exp $
+
+*git-sources-2.6.35_rc2-r5 (11 Jun 2010)
+
+  11 Jun 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.35_rc2-r5.ebuild:
+  Version bump
 
 *git-sources-2.6.35_rc2-r4 (10 Jun 2010)
 
